# irodori-extension-scylladb

./: Cargo.toml  Makefile  README.ja.md  README.md  connector.config.json  connector.source.json  irodori.extension.json
.github/workflows/: ci.yml  release.yml
native/source/: README.ja.md  README.md
src/: driver.rs  lib.rs
tools/: README.ja.md
