[package]
name = "irodori-extension-scylladb"
version = "0.1.1"
edition = "2021"
license = "MIT OR 0BSD"
description = "Native Irodori Table connector extension for ScyllaDB."
repository = "https://github.com/hjosugi/irodori-extension-scylladb"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_scylladb"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
scylla = "1.7"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
